--- a/register-success.ejs
+++ b/register-success.ejs
@@ -2,9 +2,9 @@
 <html>
 
 <head id="head">
-    <base href="/userauth-web/">
+    <base href="/userauth/">
     <meta charset="UTF-8">
-    <title>userauth-web/register-success</title>
+    <title>userauth/register-success</title>
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link rel="stylesheet" href="/dmxAppConnect/dmxMediumEditor/medium-editor.css" />
 
