Fix login links and button layout

--- a/register.ejs
+++ b/register.ejs
@@ -1,5 +1,7 @@
 <!doctype html>
-<html><head id="head"><base href="/">
+<html>
+<head id="head">
+<base href="/">
 <meta charset="UTF-8">
 <title>userauth/register</title>
 <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -56,7 +58,9 @@
 <link rel="stylesheet" href="/dmxAppConnect/dmxNotifications/dmxNotifications.css" />
 
 </head>
-<body is="dmx-app"><div id="register_div" is="dmx-view"><%- await include(content, locals); %>
+<body is="dmx-app">
+<div id="register_div" is="dmx-view">
+<%- await include(content, locals); %>
 </div>
 </body>
 
