Regen with latest impress

--- a/password-reset-request.ejs
+++ b/password-reset-request.ejs
@@ -1,63 +1,69 @@
 <!doctype html>
 <html>
 <head id="head">
+<script src="/dmxAppConnect/dmxAppConnect.js"></script>
+<script defer="" src="/js/jquery-3.5.1.slim.min.js"></script>
+<script defer="" src="/js/moment.js/2/moment.min.js"></script>
 <base href="/">
 <meta charset="UTF-8">
 <title>userauth/password-reset-request</title>
-<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-<link rel="stylesheet" href="/dmxAppConnect/dmxMediumEditor/medium-editor.css" />
+<meta content="width=device-width, initial-scale=1, shrink-to-fit=no, maximum-scale=1" name="viewport">
+<link href="/dmxAppConnect/dmxMediumEditor/medium-editor.css" rel="stylesheet" />
 
-<script src="https://www.google.com/recaptcha/api.js" defer=""></script>
-<script src="/dmxAppConnect/dmxAppConnect.js"></script>
-<script src="/dmxAppConnect/dmxBootstrap5Modal/dmxBootstrap5Modal.js"></script>
-<script src="/dmxAppConnect/dmxRouting/dmxRouting.js"></script>
-<script src="/js/jquery-3.5.1.slim.min.js" defer=""></script>
-<script src="/js/moment.js/2/moment.min.js" defer=""></script>
-<script src="/dmxAppConnect/dmxFormatter/dmxFormatter.js" defer=""></script>
-<script src="/dmxAppConnect/dmxBrowser/dmxBrowser.js" defer=""></script>
-<script src="/dmxAppConnect/dmxAnimateCSS/dmxAnimateCSS.js" defer=""></script>
-<script src="/dmxAppConnect/dmxCharts/Chart.min.js" defer=""></script>
-<script src="/dmxAppConnect/dmxCharts/dmxCharts.js" defer=""></script>
-<script src="/dmxAppConnect/dmxDatePicker/daterangepicker.min.js" defer=""></script>
-<script src="/dmxAppConnect/dmxDatePicker/dmxDatePicker.js" defer=""></script>
-<script src="/dmxAppConnect/dmxMediumEditor/medium-editor.js" defer=""></script>
-<script src="/dmxAppConnect/dmxDropzone/dmxDropzone.js" defer=""></script>
-<script src="/dmxAppConnect/dmxDownload/dmxDownload.js" defer=""></script>
-<script src="/dmxAppConnect/dmxScheduler/dmxScheduler.js" defer=""></script>
-<script src="/dmxAppConnect/dmxValidator/dmxValidator.js" defer=""></script>
+<script defer="" src="https://www.google.com/recaptcha/api.js"></script>
+<script defer="" src="/dmxAppConnect/dmxBootstrap5Modal/dmxBootstrap5Modal.js"></script>
+<script defer="" src="/dmxAppConnect/dmxRouting/dmxRouting.js"></script>
+<script defer="" src="/dmxAppConnect/dmxFormatter/dmxFormatter.js"></script>
+<script defer="" src="/dmxAppConnect/dmxBrowser/dmxBrowser.js"></script>
+<script defer="" src="/dmxAppConnect/dmxAnimateCSS/dmxAnimateCSS.js"></script>
+<script defer="" src="/dmxAppConnect/dmxCharts/Chart.min.js"></script>
+<script defer="" src="/dmxAppConnect/dmxCharts/dmxCharts.js"></script>
+<script defer="" src="/dmxAppConnect/dmxDatePicker/daterangepicker.min.js"></script>
+<script defer="" src="/dmxAppConnect/dmxDatePicker/dmxDatePicker.js"></script>
+<script defer="" src="/dmxAppConnect/dmxMediumEditor/medium-editor.js"></script>
+<script defer="" src="/dmxAppConnect/dmxDropzone/dmxDropzone.js"></script>
+<script defer="" src="/dmxAppConnect/dmxDownload/dmxDownload.js"></script>
+<script defer="" src="/dmxAppConnect/dmxScheduler/dmxScheduler.js"></script>
+<script defer="" src="/dmxAppConnect/dmxValidator/dmxValidator.js"></script>
 <script src="https://cdn.plot.ly/plotly-2.12.1.min.js"></script>
 <script src="/bootstrap/5/js/bootstrap.bundle.min.js"></script>
-<script src="/dmxAppConnect/dmxBootbox5/bootstrap-modbox.min.js" defer=""></script>
-<script src="/dmxAppConnect/dmxBootbox5/dmxBootbox5.js" defer=""></script>
-<script src="/dmxAppConnect/dmxNotifications/dmxNotifications.js" defer=""></script>
-<script src="/dmxAppConnect/dmxStateManagement/dmxStateManagement.js" defer=""></script>
-<script src="/socket.io/socket.io.js" defer=""></script>
-<script src="/dmxAppConnect/dmxSockets/dmxSockets.js" defer=""></script>
-<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.14.0/css/all.css" crossorigin="sha384-HzLeBuhoNPvSl5KYnjx0BT+WB0QEEqLprO+NBkkk5gbc67FTaL7XIGa2w1L0Xbgc" integrity="anonymous" />
+<script defer="" src="/dmxAppConnect/dmxBootbox5/bootstrap-modbox.min.js"></script>
+<script defer="" src="/dmxAppConnect/dmxBootbox5/dmxBootbox5.js"></script>
+<script defer="" src="/dmxAppConnect/dmxNotifications/dmxNotifications.js"></script>
+<script defer="" src="/dmxAppConnect/dmxStateManagement/dmxStateManagement.js"></script>
+<script defer="" src="/socket.io/socket.io.js"></script>
+<script defer="" src="/dmxAppConnect/dmxSockets/dmxSockets.js"></script>
+<script defer="" src="/dmxAppConnect/dmxMediumEditor/dmxMediumEditor.js"></script>
+<script defer="" src="https://js.stripe.com/v3/"></script>
+<script defer="" src="/dmxAppConnect/dmxStripe/dmxStripe.js"></script>
+<link crossorigin="sha384-HzLeBuhoNPvSl5KYnjx0BT+WB0QEEqLprO+NBkkk5gbc67FTaL7XIGa2w1L0Xbgc" href="https://use.fontawesome.com/releases/v5.14.0/css/all.css" integrity="anonymous" rel="stylesheet" />
 
-<link rel="preconnect" href="https://fonts.googleapis.com" />
+<link href="https://fonts.googleapis.com" rel="preconnect" />
 
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+<link crossorigin href="https://fonts.gstatic.com" rel="preconnect" />
 
-<link rel="icon" href="/favicon.ico" />
+<link href="/favicon.ico" rel="icon" />
 
-<link rel="stylesheet" href="/bootstrap/5/css/bootstrap.min.css" />
+<link href="/bootstrap/5/css/bootstrap.min.css" rel="stylesheet" />
 
-<link rel="stylesheet" href="/dmxAppConnect/dmxAnimateCSS/animate.min.css" />
+<link href="/dmxAppConnect/dmxAnimateCSS/animate.min.css" rel="stylesheet" />
 
-<link rel="stylesheet" href="/dmxAppConnect/dmxDatePicker/daterangepicker.min.css" />
+<link href="/dmxAppConnect/dmxDatePicker/daterangepicker.min.css" rel="stylesheet" />
 
-<link rel="stylesheet" href="/dmxAppConnect/dmxDatePicker/dmxDatePicker.css" />
+<link href="/dmxAppConnect/dmxDatePicker/dmxDatePicker.css" rel="stylesheet" />
 
-<link rel="stylesheet" href="/dmxAppConnect/dmxMediumEditor/dmxMediumEditor.css" />
+<link href="/dmxAppConnect/dmxMediumEditor/dmxMediumEditor.css" rel="stylesheet" />
 
-<link rel="stylesheet" href="/dmxAppConnect/dmxDropzone/dmxDropzone.css" />
+<link href="/dmxAppConnect/dmxDropzone/dmxDropzone.css" rel="stylesheet" />
 
-<link rel="stylesheet" href="/dmxAppConnect/dmxValidator/dmxValidator.css" />
+<link href="/dmxAppConnect/dmxValidator/dmxValidator.css" rel="stylesheet" />
 
-<link rel="stylesheet" href="/dmxAppConnect/dmxNotifications/dmxNotifications.css" />
+<link href="/dmxAppConnect/dmxNotifications/dmxNotifications.css" rel="stylesheet" />
+
+<link href="/dmxAppConnect/dmxMediumEditor/themes/default.css" rel="stylesheet" />
 
 </head>
+
 <body is="dmx-app">
 <div id="password-reset-request_div" is="dmx-view">
 <%- await include(content, locals); %>
