Remove some unecessary includes

--- a/register.ejs
+++ b/register.ejs
@@ -7,6 +7,8 @@
 <base href="/">
 <meta charset="UTF-8">
 <title>userauth/register</title>
+<link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400&family=Roboto:wght@500&family=Arial:wght@400&display=swap" rel="stylesheet" />
+
 <meta content="width=device-width, initial-scale=1, shrink-to-fit=no, maximum-scale=1" name="viewport">
 <link href="/dmxAppConnect/dmxMediumEditor/medium-editor.css" rel="stylesheet" />
 
@@ -34,8 +36,6 @@
 <script defer="" src="/socket.io/socket.io.js"></script>
 <script defer="" src="/dmxAppConnect/dmxSockets/dmxSockets.js"></script>
 <script defer="" src="/dmxAppConnect/dmxMediumEditor/dmxMediumEditor.js"></script>
-<script defer="" src="https://js.stripe.com/v3/"></script>
-<script defer="" src="/dmxAppConnect/dmxStripe/dmxStripe.js"></script>
 <link crossorigin="sha384-HzLeBuhoNPvSl5KYnjx0BT+WB0QEEqLprO+NBkkk5gbc67FTaL7XIGa2w1L0Xbgc" href="https://use.fontawesome.com/releases/v5.14.0/css/all.css" integrity="anonymous" rel="stylesheet" />
 
 <link href="https://fonts.googleapis.com" rel="preconnect" />
